--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@vercel/node": "^2.4.4",
+    "airtable": "^0.11.4",
+    "framer-motion": "^7.2.1",
     "picosanity": "^4.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
