--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
     "framer-motion": "^7.2.1",
     "picosanity": "^4.0.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-audio-player": "^0.17.0",
+    "react-dom": "^18.2.0",
+    "react-social-icons": "^5.14.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.0",
