--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vercel/node": "^2.4.4",
     "airtable": "^0.11.4",
     "framer-motion": "^7.2.1",
+    "luxon": "^3.0.3",
     "picosanity": "^4.0.0",
     "react": "^18.2.0",
     "react-audio-player": "^0.17.0",
@@ -31,6 +32,7 @@
     "@remix-run/dev": "^1.7.0",
     "@remix-run/eslint-config": "^1.7.0",
     "@remix-run/serve": "^1.7.0",
+    "@types/luxon": "^3.0.1",
     "@types/react": "^18.0.15",
     "@types/react-dom": "^18.0.6",
     "eslint": "^8.20.0",
