--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@remix-run/node": "^1.7.0",
     "@remix-run/react": "^1.7.0",
     "@remix-run/vercel": "^1.7.0",
+    "@supabase/supabase-js": "^2.10.0",
     "@tailwindcss/aspect-ratio": "^0.4.0",
     "@tailwindcss/forms": "^0.5.2",
     "@vercel/node": "^2.4.4",
